# kirei

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.agents/skills/rust-skills/rules/: anti-expect-lazy.md
.cargo/: config.toml
.cursor/skills/rust-skills/rules/: err-expect-bugs-only.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: args.rs  commands.rs  main.rs
core/: Cargo.toml
core/src/: config.rs  error.rs  lib.rs
core/src/unified/: github.rs  github_oauth.rs  jira.rs  linear.rs  mod.rs  trello.rs
providers/github/: Cargo.toml
providers/github/src/: lib.rs  oauth.rs
providers/jira/: Cargo.toml
providers/jira/src/: lib.rs
providers/linear/: Cargo.toml
providers/linear/src/: lib.rs
providers/trello/: Cargo.toml
providers/trello/src/: lib.rs
skills/atomic-commit/: SKILL.md
skills/auto-git-commit/: SKILL.md
skills/auto-git-commit/references/: openclaw-pr-workflow.md
skills/rust-skills/: CLAUDE.md  SKILL.md
