[workspace]
members = ["core", "cli", "providers/github", "providers/linear", "providers/trello", "providers/jira"]
default-members = ["cli"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
cliclack = "0.3"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "gzip", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tiny_http = "0.12"
url = "2.5"
rand = "0.8"
open = "5.0"
base64 = "0.22"
urlencoding = "2.1"
