[package]
name = "kirei-provider-github"
version = "0.1.0"
edition = "2021"
description = "GitHub provider for Kirei"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
rand = { workspace = true }
tiny_http = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
